--- a/index.html
+++ b/index.html
@@ -54,19 +54,13 @@
         </div>
     </div>
     <div class="quote">
-        <div class="quotetext">
-            <div class="text">
-                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            </div>
-            <div class="author">
-                <p>-Thor, God of Thunder</p>
-            </div>
-        </div>
+        <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+        <p>-Thor, God of Thunder</p>
     </div>
     <div class="signup">
         <div class="banner">
             <div class="signuptext">
-                <p class="callout">Call to action! It's time!</p>
+                <strong>Call to action! It's time!</strong>
                 <p class="subtext">Sign up for our product by clicking that button right over there!</p>
             </div>
             <div class="signupbutton">
