--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
+<!-- navbar = nav
+logo = left
+links = right
+opening = welcome
+text = left
+image = right
+herotext = hero
+secondarytext = secondary
+
+-->
 <body>
     <div class="sectionzero">
         <div class="navbar">
